--- a/clase-1/demo/build.gradle
+++ b/clase-1/demo/build.gradle
@@ -51,7 +51,8 @@ dependencies {
 
   compile('com.domingosuarez:oneltico:0.1.2')
 
-  runtime("com.h2database:h2")
+  runtime 'org.postgresql:postgresql:9.4-1201-jdbc41'
+
   testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
@@ -75,5 +76,5 @@ watch {
 }
 
 springBoot {
-  executable = true
+  //executable = true
 }
