--- a/clase-1/demo/build.gradle
+++ b/clase-1/demo/build.gradle
@@ -52,6 +52,7 @@ dependencies {
   compile('com.domingosuarez:oneltico:0.1.2')
 
   runtime 'org.postgresql:postgresql:9.4-1201-jdbc41'
+  runtime 'org.flywaydb:flyway-core:3.2.1'
 
   testCompile("org.springframework.boot:spring-boot-starter-test")
 }
