--- a/clase-1/demo/build.gradle
+++ b/clase-1/demo/build.gradle
@@ -43,6 +43,10 @@ dependencies {
   compile("org.springframework.boot:spring-boot-starter-data-jpa")
   compile("org.springframework.boot:spring-boot-starter-thymeleaf")
   compile("org.springframework.boot:spring-boot-starter-web")
+  compile("org.springframework.boot:spring-boot-starter-actuator")
+  compile("org.springframework.boot:spring-boot-starter-security")
+  compile("org.springframework.boot:spring-boot-starter-amqp")
+
   compile("org.codehaus.groovy:groovy:2.4.4")
 
   compile ("org.lightadmin:lightadmin:1.2.0.RC1")
